# raceflection

./: .gitignore  README.md  config.cfg
game/: CMakeLists.txt  CMakeLists.txt.user.5bfea85.18
game/application/: CMakeApplicationGeneration.cmake  CMakeApplicationGeneration.cmake~
game/application/AssetPipeline/: CMakeLists.txt  CMakeLists.txt~  _ignoreCMakeLists.txt
game/application/AssetPipeline/include/: CRC32.h  Filesystem.h  ImportAnimation.h  ImportAudio.h  ImportEffect.h  ImportGameObject.h  ImportGeometry.h  ImportLight.h  ImportMaterial.h  ImportMesh.h  ImportPhysic.h  ImportPhysics.h  ImportScene.h  ImportTexture.h  Package.h  PackageManager.h  Resource.h
game/application/AssetPipeline/include/Animation/: ImportAnimation.h
game/application/AssetPipeline/include/Audio/: ImportAudio.h
game/application/AssetPipeline/include/Light/: ImportLight.h
game/application/AssetPipeline/include/Material/: ImportMaterial.h
game/application/AssetPipeline/include/Mesh/: ImportMesh.h
game/application/AssetPipeline/include/Package/: Package.h  PackageManager.h
game/application/AssetPipeline/include/Texture/: ImportTexture.h
game/application/AssetPipeline/source/: Filesystem.cpp  ImportAnimation.cpp  ImportAudio.cpp  ImportEffect.cpp  ImportGameObject.cpp  ImportGeometry.cpp  ImportLight.cpp  ImportMaterial.cpp  ImportMesh.cpp  ImportPhysics.cpp  ImportScene.cpp  ImportTexture.cpp  Main.cpp  Package.cpp  PackageManager.cpp
game/application/AssetPipeline/source/Animation/: ImportAnimation.cpp
game/application/AssetPipeline/source/Audio/: ImportAudio.cpp
game/application/AssetPipeline/source/Light/: ImportLight.cpp
game/application/AssetPipeline/source/Material/: ImportMaterial.cpp
game/application/AssetPipeline/source/Mesh/: ImportMesh.cpp  ImportMesh.cpp.autosave
game/application/AssetPipeline/source/Package/: Package.cpp  PackageManager.cpp
game/application/AssetPipeline/source/Texture/: ImportTexture.cpp
game/application/RacingGame/: CMakeLists.txt  CMakeLists.txt~  expand.txt
game/application/RacingGame/include/: Logging.h  Main.h
game/application/RacingGame/source/: Main.cpp
game/shared/: CMakeSharedLibGeneration.cmake
game/static/: CMakeStaticLibGeneration.cmake
game/static/Core/: CMakeLists.txt  expand.txt  expand.txt~  expanded.txt
game/static/Core/include/: Core.h  MemorySystem.h  Path.h  Point.h  Predefs.h  Size.h
game/static/Core/include/Math/: Math.h  (+1 more)
game/static/DDSloader/: _ignoreCMakeLists.txt
game/static/DDSloader/include/: DDSloader.h
game/static/DDSloader/source/: DDSloader.cpp
game/static/Resource/: CMakeLists.txt
game/static/Resource/include/: AnimationSpec.h  AudioSpec.h  EffectSpec.h  GameObjectSpec.h  GeometrySpec.h  LightSpec.h  MaterialSpec.h  MeshSpec.h  PackageSpec.h  PhysicsSpec.h  ResourceSpec.h  TextureSpec.h
game/static/Resource/source/: AnimationSpec.cpp  AudioSpec.cpp  EffectSpec.cpp  GameObjectSpec.cpp  GeometrySpec.cpp  LightSpec.cpp  MaterialSpec.cpp  MeshSpec.cpp  PackageSpec.cpp  PhysicsSpec.cpp  ResourceSpec.cpp  TextureSpec.cpp
sdks-source/: CMakeLists.txt  CMakeLists.txt.user.67b88b4  DependencyList.cmake  build.sh
sdks-source/acgl/: CMakeListsStaticInclude.txt  LICENSE.TXT
sdks-source/acgl/cmake/: CMakeMacros.txt  FindACGL.cmake  FindBOX2D.cmake  FindBULLET.cmake  FindFREETYPE.cmake  FindGLM.cmake  FindGOOGLETEST.cmake  FindLUA.cmake
sdks-source/acgl/include/ACGL/: ACGL.hh
sdks-source/acgl/src/lodepng/: lodepng.cpp
sdks-source/assimp/: .gitignore
sdks-source/assimp/contrib/zlib/: CMakeLists.txt
sdks-source/bullet3/: .travis.yml  CMakeLists.txt
sdks-source/bullet3/Extras/ConvexDecomposition/: CMakeLists.txt
sdks-source/bullet3/Extras/GIMPACTUtils/: CMakeLists.txt
sdks-source/bullet3/Extras/HACD/: CMakeLists.txt
sdks-source/bullet3/examples/OpenGLWindow/: CMakeLists.txt
sdks-source/bullet3/src/: CMakeLists.txt
sdks-source/bullet3/src/Bullet3Collision/: CMakeLists.txt
sdks-source/bullet3/src/Bullet3Common/: CMakeLists.txt
sdks-source/bullet3/src/Bullet3Dynamics/: CMakeLists.txt
sdks-source/bullet3/src/Bullet3Geometry/: CMakeLists.txt
sdks-source/bullet3/src/Bullet3OpenCL/: CMakeLists.txt
sdks-source/bullet3/src/BulletCollision/: CMakeLists.txt
sdks-source/bullet3/src/BulletDynamics/: CMakeLists.txt
sdks-source/bullet3/src/BulletSoftBody/: CMakeLists.txt
sdks-source/bullet3/src/LinearMath/: CMakeLists.txt
sdks-source/dirent/: CMakeLists.txt  CMakeLists.txt~
sdks-source/dirent/include/: dirent.h
sdks-source/glfw/: CMakeLists.txt
sdks-source/glfw/src/: CMakeLists.txt
sdks-source/hash-library/lib/: hash-library-d.lib
sdks-source/nvFX/: CMakeLists.txt
sdks-source/nvFX/FxLib/: CMakeLists.txt  CstBuffer.cpp  Fx.h  Pass.cpp
sdks-source/nvFX/FxLibCUDA/: CMakeLists.txt
sdks-source/nvFX/FxLibD3D/: CMakeLists.txt
sdks-source/nvFX/FxLibGL/: CMakeLists.txt  FxGL.h  FxLibGL.cpp  GLSLProgram.cpp  resourcesGL.cpp
sdks-source/nvFX/FxLibOPTIX/: CMakeLists.txt
sdks-source/nvFX/FxParser/: CMakeLists.txt  FxParser.cpp  Grammar.cpp  Grammar.hpp  Grammar.output  Grammar.ypp  lex.cpp  lex.yy
sdks-source/nvFX/glew/: ignoreCMakeLists.txt
sdks-source/nvFX/glew/src/: glew.c
sdks-source/nvFX/include/: FxLib.h
sdks-source/nvFX/nvFxcc/: CMakeLists.txt
sdks-source/nv_dds/: CMakeLists.txt
sdks-source/nv_dds/include/: nvDDS.h
sdks-source/nv_dds/source/: nvDDS.cpp
sdks-source/stage1/: CMakeLists.txt  CMakeLists.txt.user.5bfea85.18  Stage1List.cmake
sdks-source/stage1/hash-library/include/: crc32.h
sdks-source/stage2/: CMakeLists.txt  CMakeLists.txt.user.5bfea85.18  CMakeLists.txt~
sdks-source/stage2/acgl/: CMakeLists.txt  README.TXT
sdks-source/stage2/acgl/cmake/: CheckSharedFunctionExists.c  CheckSharedLibraryExists.cmake  CompileOptions.txt  DefinesACGL.txt  DefinesGLEW.txt  FindANGELSCRIPT.cmake  FindGLEW.cmake  FindOGG.cmake  FindOPENAL.cmake  FindSLB.cmake  FindVORBIS.cmake  GlobalAndLocalExternACGL.txt
sdks-source/stage2/assimp/: CMakeLists.txt  appveyor.yml  assimp-config.cmake.in
sdks-source/stage2/assimp/code/: CMakeLists.txt
(+459 files in other folders)
