INCLUDE_DIRECTORIES( 
	${BULLET_PHYSICS_SOURCE_DIR}/src
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/Serialize/BulletFileLoader
	${BULLET_PHYSICS_SOURCE_DIR}/Extras/Serialize/BulletWorldImporter
)

ADD_LIBRARY(
	BulletXmlWorldImporter 
	${BULLET_LIB_BUILD_TYPE}
	btBulletXmlWorldImporter.cpp 
	btBulletXmlWorldImporter.h 
	string_split.cpp
	string_split.h
	tinyxml.cpp
	tinyxml.h
	tinystr.cpp
	tinystr.h
	tinyxmlerror.cpp
	tinyxmlparser.cpp
)

SET_TARGET_PROPERTIES(BulletXmlWorldImporter  PROPERTIES VERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(BulletXmlWorldImporter PROPERTIES SOVERSION ${BULLET_VERSION})

IF (BULLET_BUILD_SHARED_LIBS)
        TARGET_LINK_LIBRARIES(BulletXmlWorldImporter BulletWorldImporter BulletDynamics BulletCollision BulletFileLoader LinearMath)
ENDIF (BULLET_BUILD_SHARED_LIBS)

IF (INSTALL_EXTRA_LIBS)
	IF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
		#FILES_MATCHING requires CMake 2.6
		IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
			IF (APPLE AND BULLET_BUILD_SHARED_LIBS AND FRAMEWORK)
				INSTALL(TARGETS BulletXmlWorldImporter DESTINATION .)
			ELSE (APPLE AND BULLET_BUILD_SHARED_LIBS AND FRAMEWORK)
				INSTALL(TARGETS BulletXmlWorldImporter 
					RUNTIME DESTINATION bin/debug CONFIGURATIONS Debug
					LIBRARY DESTINATION lib${LIB_SUFFIX}/debug CONFIGURATIONS Debug
					ARCHIVE DESTINATION lib${LIB_SUFFIX}/debug CONFIGURATIONS Debug)
				INSTALL(TARGETS BulletXmlWorldImporter 
					RUNTIME DESTINATION bin/release CONFIGURATIONS Release RelWithDebInfo MinSizeRel None ""
					LIBRARY DESTINATION lib${LIB_SUFFIX}/release CONFIGURATIONS Release RelWithDebInfo MinSizeRel None ""
					ARCHIVE DESTINATION lib${LIB_SUFFIX}/release CONFIGURATIONS Release RelWithDebInfo MinSizeRel None "")
				INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
DESTINATION ${INCLUDE_INSTALL_DIR} FILES_MATCHING PATTERN "*.h"  PATTERN
".svn" EXCLUDE PATTERN "CMakeFiles" EXCLUDE)
			ENDIF (APPLE AND BULLET_BUILD_SHARED_LIBS AND FRAMEWORK)
		ENDIF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)

		IF (APPLE AND BULLET_BUILD_SHARED_LIBS AND FRAMEWORK)
			SET_TARGET_PROPERTIES(BulletXmlWorldImporter PROPERTIES FRAMEWORK true)
			SET_TARGET_PROPERTIES(BulletXmlWorldImporter PROPERTIES PUBLIC_HEADER "btBulletXmlWorldImporter.h")
		ENDIF (APPLE AND BULLET_BUILD_SHARED_LIBS AND FRAMEWORK)
	ENDIF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
ENDIF (INSTALL_EXTRA_LIBS)
